[gd_scene load_steps=3 format=3 uid="uid://dyfbrfqiy7sgy"]

[ext_resource type="Script" path="res://Scripts/Settings.gd" id="1_g2fnj"]
[ext_resource type="Texture2D" uid="uid://d4lg0otml5xas" path="res://Assets/environment/galacticWars.png" id="2_0lq5x"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1408.0
offset_bottom = 792.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2fnj")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
scale = Vector2(4, 4)
texture = ExtResource("2_0lq5x")

[node name="Label" type="Label" parent="."]
z_index = 3
layout_mode = 0
offset_left = 1300.0
offset_top = 250.0
offset_right = 1600.0
offset_bottom = 550.0
theme_type_variation = &"HeaderLarge"
text = "Settings"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="."]
z_index = 3
layout_mode = 0
offset_left = 1280.0
offset_top = 300.0
offset_right = 1680.0
offset_bottom = 500.0
min_value = -80.0
max_value = 0.0

[node name="OptionButton" type="OptionButton" parent="."]
z_index = 3
layout_mode = 0
offset_left = 1280.0
offset_top = 600.0
offset_right = 1680.0
offset_bottom = 800.0
item_count = 2
popup/item_0/text = "Türkçe"
popup/item_1/text = "English"
popup/item_1/id = 1

[node name="BackButton" type="Button" parent="."]
z_index = 2
layout_mode = 0
offset_left = 1280.0
offset_top = 900.0
offset_right = 1680.0
offset_bottom = 1100.0
text = "Back"

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
